<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E970E"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".home_portal">

    <TextView
        android:id="@+id/Bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Bienvenida"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/labelUser"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonStart" />

</LinearLayout>